// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar snapshots > last step (100%) 1`] = `
<div
  class="w-full h-1 rounded-full "
  style="background: var(--tour--progress--background) var(--tour--progress--background);"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="h-full rounded-full transition-all duration-300 ease-in-out"
    role="progressbar"
    style="width: 100%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
  />
</div>
`;

exports[`ProgressBar snapshots > step 1 of 4 (25%) 1`] = `
<div
  class="w-full h-1 rounded-full "
  style="background: var(--tour--progress--background) var(--tour--progress--background);"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="25"
    class="h-full rounded-full transition-all duration-300 ease-in-out"
    role="progressbar"
    style="width: 25%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
  />
</div>
`;

exports[`ProgressBar snapshots > step 2 of 4 (50%) 1`] = `
<div
  class="w-full h-1 rounded-full "
  style="background: var(--tour--progress--background) var(--tour--progress--background);"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="h-full rounded-full transition-all duration-300 ease-in-out"
    role="progressbar"
    style="width: 50%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
  />
</div>
`;

exports[`ProgressBar snapshots > with custom class 1`] = `
<div
  class="w-full h-1 rounded-full h-2"
  style="background: var(--tour--progress--background) var(--tour--progress--background);"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="66.66666666666666"
    class="h-full rounded-full transition-all duration-300 ease-in-out"
    role="progressbar"
    style="width: 66.66666666666666%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
  />
</div>
`;

exports[`Spotlight snapshots > first step 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 3: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Skip tour"
          class="tour-button tour-button-secondary"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Go to next step"
        class="tour-button tour-button-primary"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Spotlight snapshots > last step 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 3: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Go to previous step"
          class="tour-button tour-button-secondary"
        >
          Back
        </button>
        <button
          aria-label="Skip tour"
          class="tour-button tour-button-secondary"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Complete tour"
        class="tour-button tour-button-primary"
      >
        Done
      </button>
    </div>
  </div>
</div>
`;

exports[`Spotlight snapshots > mid-tour default 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 3: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Go to previous step"
          class="tour-button tour-button-secondary"
        >
          Back
        </button>
        <button
          aria-label="Skip tour"
          class="tour-button tour-button-secondary"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Go to next step"
        class="tour-button tour-button-primary"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Spotlight snapshots > skip hidden 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 3: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Go to previous step"
          class="tour-button tour-button-secondary"
        >
          Back
        </button>
      </div>
      <button
        aria-label="Go to next step"
        class="tour-button tour-button-primary"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Spotlight snapshots > with custom classes 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 3: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50 bg-violet-800 text-white"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Go to previous step"
          class="tour-button tour-button-secondary rounded-full"
        >
          Back
        </button>
        <button
          aria-label="Skip tour"
          class="tour-button tour-button-secondary rounded-full"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Go to next step"
        class="tour-button tour-button-primary rounded-full"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Spotlight snapshots > with progress bar 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="polite"
    class="sr-only"
    role="status"
  >
    Step 2 of 4: target element. Spotlight content
  </div>
  <div
    aria-hidden="true"
    class="tour-highlight z-50 tour-highlight"
    data-animation="slide"
    role="presentation"
    style="position: fixed; top: 92px; left: 192px; width: 216px; height: 216px;"
  />
  <div
    aria-describedby="tour-step-content"
    aria-labelledby="tour-step-title"
    aria-modal="true"
    class="tour-tooltip z-50"
    data-animation="slide"
    data-placement="bottom"
    role="dialog"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="sr-only"
      id="tour-step-title"
    >
      Tour Step: target element
    </div>
    <div
      class="mb-4"
    >
      <div
        class="flex justify-between items-center mb-1"
      >
        <span
          aria-hidden="true"
          class="text-xs"
          style="opacity: 0.6;"
        >
          Step 2 of 4
        </span>
      </div>
      <div
        class="w-full h-1 rounded-full "
        style="background: var(--tour--progress--background) var(--tour--progress--background);"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="h-full rounded-full transition-all duration-300 ease-in-out"
          role="progressbar"
          style="width: 50%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
        />
      </div>
    </div>
    <div
      class="mb-4"
      id="tour-step-content"
    >
      Spotlight content
    </div>
    <div
      aria-label="Tour navigation"
      class="flex justify-between items-center gap-2"
      role="toolbar"
      style="flex-direction: row; align-items: center; gap: 0.5rem;"
    >
      <div
        class="flex gap-2"
      >
        <button
          aria-label="Go to previous step"
          class="tour-button tour-button-secondary"
        >
          Back
        </button>
        <button
          aria-label="Skip tour"
          class="tour-button tour-button-secondary"
        >
          Skip
        </button>
      </div>
      <button
        aria-label="Go to next step"
        class="tour-button tour-button-primary"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`TourOverlay snapshots > partial blur overlay 1`] = `
<div
  aria-hidden="true"
  class="fixed inset-0 z-40 backdrop-blur-sm bg-black/40"
  role="presentation"
  style="mix-blend-mode: multiply;"
/>
`;

exports[`TourOverlay snapshots > standard overlay 1`] = `
<div
  aria-hidden="true"
  class="tour-overlay fixed inset-0 z-40"
  role="presentation"
/>
`;

exports[`TourOverlay snapshots > with custom overlay class 1`] = `
<div
  aria-hidden="true"
  class="tour-overlay fixed inset-0 z-40 bg-indigo-900/60"
  role="presentation"
/>
`;

exports[`TourTooltip snapshots > custom content type 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    <div
      class="custom-widget"
    >
      Custom UI
    </div>
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > first step — no Back button 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Step one
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > image content type 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    <img
      alt="Tour content"
      class="w-full h-auto rounded-lg"
      src="https://example.com/hero.png"
    />
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > last step — Done button 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Final step
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Complete tour"
      class="tour-button tour-button-primary"
    >
      Done
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > skip hidden 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    No skip
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > text content — mid-tour 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Welcome to the feature!
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > with bounce animation data attribute 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="bounce"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Bounce
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > with custom primary button content 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Custom button
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Continue →
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > with custom tooltip class 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50 bg-rose-900 text-white rounded-2xl"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Styled
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > with fade animation data attribute 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="fade"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Fade
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`TourTooltip snapshots > with progress bar 1`] = `
<div
  aria-describedby="tour-step-content"
  aria-labelledby="tour-step-title"
  aria-modal="true"
  class="tour-tooltip z-50"
  data-animation="slide"
  data-placement="bottom"
  role="dialog"
  style="position: absolute; top: 100px; left: 200px;"
>
  <div
    class="sr-only"
    id="tour-step-title"
  >
    Tour Step: Feature button
  </div>
  <div
    class="mb-4"
  >
    <div
      class="flex justify-between items-center mb-1"
    >
      <span
        aria-hidden="true"
        class="text-xs"
        style="opacity: 0.6;"
      >
        Step 2 of 4
      </span>
    </div>
    <div
      class="w-full h-1 rounded-full "
      style="background: var(--tour--progress--background) var(--tour--progress--background);"
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="50"
        class="h-full rounded-full transition-all duration-300 ease-in-out"
        role="progressbar"
        style="width: 50%; background: var(--tour--progress--fill) var(--tour--progress--fill);"
      />
    </div>
  </div>
  <div
    class="mb-4"
    id="tour-step-content"
  >
    Step 2
  </div>
  <div
    aria-label="Tour navigation"
    class="flex justify-between items-center gap-2"
    role="toolbar"
    style="flex-direction: row; align-items: center; gap: 0.5rem;"
  >
    <div
      class="flex gap-2"
    >
      <button
        aria-label="Go to previous step"
        class="tour-button tour-button-secondary"
      >
        Back
      </button>
      <button
        aria-label="Skip tour"
        class="tour-button tour-button-secondary"
      >
        Skip
      </button>
    </div>
    <button
      aria-label="Go to next step"
      class="tour-button tour-button-primary"
    >
      Next
    </button>
  </div>
</div>
`;
